--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,4 +4,7 @@
   <a href="/blog/">Blog</a>
   <h1>My Astro Learning Blog</h1>
   <p>This is where I will post about my journey learning Astro.</p>
+  <ul>
+  <li><a href="/posts/post-1/">post 1<a></li>
+  </ul>
 </body>
